@@ -1,0 +1,31 @@
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  android:orientation="vertical"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent" android:weightSum="1">
+	<ScrollView 
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="match_parent"
+		android:layout_weight="2" >
+    <LinearLayout
+      android:layout_width="fill_parent"
+      android:layout_height="fill_parent"
+      android:orientation="vertical"
+    >
+        <TextView android:layout_width="wrap_content" android:paddingRight="5pt" android:text="@string/WelcomeMsg" android:id="@+id/TextView01" android:autoLink="all" android:layout_height="wrap_content" android:paddingLeft="5pt"></TextView>
+		</LinearLayout>
+	</ScrollView>
+      <CheckBox
+        android:text="@string/ShowAtStartUp"
+        android:id="@+id/ShowAtStartUp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:checked="true" />
+      <Button
+        android:text="@string/OK"
+        android:id="@+id/OK"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+</LinearLayout>
